--- a/content/docs/python/index.mdx
+++ b/content/docs/python/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: Hello World
 description: Your first document
+icon: Code 
 ---
 
 Welcome to the docs! You can start writing documents in `/content/docs`.
@@ -11,3 +12,5 @@ Welcome to the docs! You can start writing documents in `/content/docs`.
   <Card title="Learn more about Next.js" href="https://nextjs.org/docs" />
   <Card title="Learn more about Fumadocs" href="https://fumadocs.vercel.app" />
 </Cards>
+
+### What is Next?
