--- a/content/docs/python/index.mdx
+++ b/content/docs/python/index.mdx
@@ -4,6 +4,8 @@ description: Your first document
 icon: Code 
 ---
 
+import { DynamicCodeBlock } from 'fumadocs-ui/components/dynamic-codeblock';
+
 Welcome to the docs! You can start writing documents in `/content/docs`.
 
 ## What is Next?
@@ -13,4 +15,48 @@ Welcome to the docs! You can start writing documents in `/content/docs`.
   <Card title="Learn more about Fumadocs" href="https://fumadocs.vercel.app" />
 </Cards>
 
-### What is Next?
+### Codeblock
+
+<DynamicCodeBlock lang="ts" code='console.log("Hello World")' />
+
+![Test](/banner.png)
+
+<Tabs items={['Javascript', 'Rust', 'C++']}>
+  <Tab value="Javascript">Javascript is weird</Tab>
+  <Tab value="Rust">Rust is fast</Tab>
+  <Tab id="tab-cpp" value="C++">
+    `Hello World`
+  </Tab>
+</Tabs>
+
+### Math
+
+Inline: $$c = \pm\sqrt{a^2 + b^2}$$
+
+```math
+c = \pm\sqrt{a^2 + b^2}
+```
+
+### Mermaid
+
+<Mermaid
+  chart="
+graph TD;
+subgraph AA [Consumers]
+A[Mobile app];
+B[Web app];
+C[Node.js client];
+end
+subgraph BB [Services]
+E[REST API];
+F[GraphQL API];
+G[SOAP API];
+end
+Z[GraphQL API];
+A --> Z;
+B --> Z;
+C --> Z;
+Z --> E;
+Z --> F;
+Z --> G;"
+/>
