--- a/content/docs/pytorch/index.mdx
+++ b/content/docs/pytorch/index.mdx
@@ -1,14 +1,57 @@
 ---
-title: Hello World
-description: Your first document
+title: Feedback
+description: Add feedback to fumadocs
 icon: Code 
 ---
 
-Welcome to the docs! You can start writing documents in `/content/docs`.
+I'll give you a complete step-by-step guide for setting up the GitHub token and deploying it to both Vercel and Netlify:
 
-## What is Next?
+## Getting GitHub Token
+1. Click your profile picture → Settings
+2. Scroll down to "Developer settings" (at the bottom of the left sidebar)
+3. Click "Personal access tokens" → "Tokens (classic)"
+4. Click "Generate new token" → "Generate new token (classic)"
+5. Fill in the token details:
+   - Note: "Docs Feedback Token"
+   - Expiration: Choose your preferred duration
+   - Select these permissions:
+     - `repo` (Full control of private repositories)
+     - `write:discussion` (Create and edit discussions)
+6. Click "Generate token"
 
-<Cards>
-  <Card title="Learn more about Next.js" href="https://nextjs.org/docs" />
-  <Card title="Learn more about Fumadocs" href="https://fumadocs.vercel.app" />
-</Cards>
+## Setting up in Vercel
+1. Go to [Vercel Dashboard](https://vercel.com/dashboard)
+2. Select your project
+3. Click "Settings" tab
+4. Click "Environment Variables" in the left sidebar
+5. Add new variable:
+   - Name: `GITHUB_TOKEN`
+   - Value: Paste your GitHub token
+   - Environment: Select "Production" (and "Preview" if needed)
+6. Click "Save"
+7. Go to "Deployments" tab
+8. Click "Redeploy" on your latest deployment
+
+## Setting up in Netlify
+1. Go to [Netlify Dashboard](https://app.netlify.com)
+2. Select your site
+3. Go to "Site settings"
+4. Click "Environment variables" in the left sidebar
+5. Click "Add a variable":
+   - Key: `GITHUB_TOKEN`
+   - Value: Paste your GitHub token
+6. Click "Save"
+7. Go to "Deploys" tab
+8. Click "Trigger deploy" → "Deploy site"
+
+
+## Important Notes
+- Keep your GitHub token secure and never commit it to your repository
+- If you need to use the token in development, create a `.env.local` file:
+  ```
+  GITHUB_TOKEN=your_token_here
+  ```
+- If you ever need to revoke the token:
+  1. Go back to GitHub → Settings → Developer settings → Personal access tokens
+  2. Find your token
+  3. Click "Delete" and confirm
